objects/MedProSC__MedProSOMappingDetail__c.object
<CustomObject>
    <description>A custom object for maintaining the system wide configuration settings for how synchronization of MedPro Search Connector results are processed (at the SO/CO field level)</description>
    <fields>
        <fullName>MedProSC__ConvertDataToDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies that this MedPro ID data represents a date [MM/DD/YYYY] format which should be store into a SF date-typed field</inlineHelpText>
        <label>Convert Data to Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Convert_To_Mixed_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wether or not this field mapping results in a string conversion which converts a field which is all Caps to a Title Capitalization scheme.</description>
        <inlineHelpText>Wether or not this field mapping results in a string conversion which converts a field which is all Caps to a Title Capitalization scheme.</inlineHelpText>
        <label>Convert To Mixed Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__DefaultValue__c</fullName>
        <inlineHelpText>The default value to use for this data mapping&apos;s field value</inlineHelpText>
        <label>Default Value</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Dynamic_Field_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dynamic Field Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__IsTimeStampField__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies if this data mapping element&apos;s field value is populated with a SF Timestamp value</inlineHelpText>
        <label>Auto TimeStamp Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Specifies if this data mapping element is active/inactive</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Checkbox_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies if this data mapping element&apos;s field value is populated with a SF checkbox value</inlineHelpText>
        <label>Is Checkbox Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Date_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies if this data mapping element&apos;s field value is populated with a SF Date value</inlineHelpText>
        <label>Auto Date Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_ExternalIDField__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies that this data mapping element&apos;s field value represents the business-unique value for the associated record</inlineHelpText>
        <label>Is External ID Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Insert__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Will insert this field upon record creation</inlineHelpText>
        <label>Is Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Mapping_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mapping Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Numeric_Data_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies that this data mapping element will convert a string value to a numeric value</inlineHelpText>
        <label>Is Numeric Data Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Passthrough_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Passthrough Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_RecordTypeField__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies that this data mapping element uses a SF RecordType value to populate its field value</inlineHelpText>
        <label>Is RecordType Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Specifies that this data mapping element&apos;s field value is considered a required field</inlineHelpText>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Determines if this field will be updated as a part of the mass update feature</inlineHelpText>
        <label>Is Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProSOMapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated MedPro Data Mapping for this data mapping detail</inlineHelpText>
        <label>Data Mapping Name</label>
        <referenceTo>MedProSC__MedProSOMapping__c</referenceTo>
        <relationshipLabel>MedPro Data Mapping Details</relationshipLabel>
        <relationshipName>MedPro_SO_Mapping_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__SourceFieldName__c</fullName>
        <inlineHelpText>The name of the field from MedPro which will populate this data mapping element&apos;s field value</inlineHelpText>
        <label>Source Field Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__UsesDefaultValue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies that this data mapping element uses a default value to populate its field value</inlineHelpText>
        <label>Uses Default Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Value_Mapping_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value Mapping Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>MedPro Data Mapping Detail</label>
    <nameField>
        <label>Target Field API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro Data Mapping Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>